--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
-.home {
-    background-color: maroon;
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
+body {
+    background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box;
+    border: 1px solid #707070;
+    opacity: 1;
 }
+a {
+    text-decoration: none;
+}
+
+.hdr-txt {
+    font-family: 'Bungee'; 
+}
+
