Add about component

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
 
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+::-webkit-scrollbar {
+    display: none;
+}
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+html {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
+
+
 body {
-    background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box;
-    border: 1px solid #707070;
     opacity: 1;
 }
 a {
@@ -13,3 +24,7 @@ a {
     font-family: 'Bungee'; 
 }
 
+.stop-scroll {
+    height: 100%;
+    overflow: hidden;
+}
