--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -11,20 +11,37 @@
 #home {
     height: 100vh;
     position: relative;
-    background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box;
+    background: linear-gradient(0deg, rgba(162,162,162,1) 0%, rgba(0,0,0,1) 2%);
+    /* background: linear-gradient(0deg, rgba(197,107,255,1) 0%, rgba(134,32,200,1) 80%, rgba(87,13,134,1) 100%); */
+    /* background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box; */
     /* width: 100vw; */
     /* background-color: purple; */
+}
+
+#name {
+    position: relative;
+    left: 2.5em;
+    display: inline-block;
+}
+
+#name-box {
+    position: absolute;
+    left: 0;
+    top: 1.5em;
+    left: .5em;
 }
 
 #my-name {
     position: relative;
     display: inline-block;
-    top: 1.5em;
-    left: 2em;
+    top: 1.1em;
+    left: 1.5em;
     text-align: left;
-    font: normal normal normal 40px/51px Bungee;
+    font: normal normal normal 44px/61px Bungee;
+    text-shadow: 2px 2px 2px #FF0000;
     letter-spacing: 0px;
-    color: #FFFFFF;
+    outline: 2px;
+    color: pink;
     opacity: 1;
     z-index: 2;
 }
@@ -38,7 +55,7 @@
     text-align: left;
     font: normal normal normal 24px/33px 'Lato';
     letter-spacing: 0px;
-    color: #FFFFFF;
+    color: white;
     opacity: 1;
     z-index: 2;
 }
@@ -84,8 +101,8 @@ span {
 .big-nav {
     font-size: 120px;
     letter-spacing: 0px;
-    color: #FFFFFF;
-    text-shadow: 0px 3px 6px #000000B3, 0px 3px 6px #00000029;
+    color: pink;
+    text-shadow: 2px 3px 0px #FF0000, 0px 3px 6px #FF0000;
     text-transform: capitalize;
     opacity: 1;
 }
