--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -11,7 +11,8 @@
 #home {
     height: 100vh;
     position: relative;
-    background: linear-gradient(0deg, rgba(162,162,162,1) 0%, rgba(0,0,0,1) 2%);
+    background: #31393C;
+    /* background: linear-gradient(0deg, rgba(162,162,162,1) 0%, rgba(0,0,0,1) 2%); */
     /* background: linear-gradient(0deg, rgba(197,107,255,1) 0%, rgba(134,32,200,1) 80%, rgba(87,13,134,1) 100%); */
     /* background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box; */
     /* width: 100vw; */
