--- a/src/components/About/index.css
+++ b/src/components/About/index.css
@@ -5,7 +5,6 @@
     height: 100vh; */
     position: relative;
     display: flex;
-    
 }
 
 /* #about-header {
@@ -24,7 +23,22 @@
 
 #about-left {
     font-size: 32px;
-    background: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    /* justify-content: center; */
     /* border: 1px solid #707070; */
 }
 
+#pfp {
+    border-radius: 100%;
+    border: 5px black;
+    margin: 50px 0;
+    animation: fadeIn 1s;
+}
+
+@keyframes fadeIn {
+    0% { opacity: 0; transform: translateY(5%);}
+    100% { opacity: 1; transform: translateY(0%)}
+}
