--- a/src/components/Contact/index.css
+++ b/src/components/Contact/index.css
@@ -10,8 +10,31 @@
     z-index: 2;
 }
 
+#contact-info {
+    display: flex;
+    /* flex-direction: column; */
+    /* align-items: center; */
+    /* justify-content: center; */
+}
+
 form {
     display: flex;
     flex-direction: column;
-    width: 40vw;
+    justify-content: center;
+    align-items: center;
+    /* width: 40vw; */
+    flex-grow: 1;
+}
+
+label {
+    width: 80%;
+}
+
+input {
+    width: 40%;
+}
+
+hr {
+    width: 80%;
+    margin-top: 2%;
 }
