--- a/src/components/Portfolio/index.css
+++ b/src/components/Portfolio/index.css
@@ -19,5 +19,64 @@
 
 #portfolio-info {
     font-size: 32px;
+    text-align: center;
 }
 
+#portfolio-title {
+    font-size: 72px;
+    margin-top: 75px;
+}
+
+#portfolio-works {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+.work {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    width: 80%;
+    margin: 50px;
+}
+
+.work-img{
+    width: 80%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.overlay {
+    position: absolute;
+    width: 80%;
+    height: 100%;
+}
+
+.overlay div {
+    opacity: 0;
+    width: 100%;
+    transition: .5s ease;
+    background-color: rgba(108, 138, 138, .7);
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 56px;
+}
+
+.overlay img {
+    height: 100px;
+}
+
+.overlay a {
+    height: 100px;
+}
+
+.overlay div:hover {
+    opacity: 1;
+}
