--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,109 +1,22 @@
-@font-face {
-    font-family: 'Lato';
-    src: url('../../res/Lato/Lato-Regular.ttf');
-}
-
-/* html, body {
-    height: 100%;
-    overflow: hidden;
-} */
-
 #home {
     height: 100vh;
-    position: relative;
-    background: #31393C;
-    /* background: linear-gradient(0deg, rgba(162,162,162,1) 0%, rgba(0,0,0,1) 2%); */
-    /* background: linear-gradient(0deg, rgba(197,107,255,1) 0%, rgba(134,32,200,1) 80%, rgba(87,13,134,1) 100%); */
-    /* background: transparent linear-gradient(180deg, #1E0040 0%, #370076 100%) 0% 0% no-repeat padding-box; */
-    /* width: 100vw; */
-    /* background-color: purple; */
-}
-
-#name {
-    position: relative;
-    left: 2.5em;
-    display: inline-block;
-}
-
-#name-box {
-    position: absolute;
-    left: 0;
-    top: 1.5em;
-    left: .5em;
-}
-
-#my-name {
-    position: relative;
-    display: inline-block;
-    top: 1.1em;
-    left: 1.5em;
-    text-align: left;
-    font: normal normal normal 44px/61px Bungee;
-    text-shadow: 2px 2px 2px #FF0000;
-    letter-spacing: 0px;
-    outline: 2px;
-    color: pink;
-    opacity: 1;
-    z-index: 2;
-}
-
-#subtitle {
-    position: relative;
-    top: 3em;
-    left: 52px;
-    width: 505px;
-    height: 66px;
-    text-align: left;
-    font: normal normal normal 24px/33px 'Lato';
-    letter-spacing: 0px;
-    color: white;
-    opacity: 1;
-    z-index: 2;
-}
-
-a {
-    /* color: white; */
-    /* display: inline-block; */
-    /* line-height: 10px; */
-
-}
-
-span {
-    display: inline-block;
-    /* line-height: 5px; */
-}
-
-.main-links {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+    width: 100 vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-color: #ededed;
 }
 
-.menu-div {
-    position: relative;
-}
-
-.menu-div a {
-    display: inline-block;
-    width: 100%;
-    height: 100%;
+#name-title {
     position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 1;
+    top: 2rem;
+    font-family: 'Metropolis', sans-serif;
+    font-size: 3rem;
 }
 
-.big-nav {
-    font-size: 120px;
-    letter-spacing: 0px;
-    color: pink;
-    text-shadow: 2px 3px 0px #FF0000, 0px 3px 6px #FF0000;
-    text-transform: capitalize;
-    opacity: 1;
+.menu-circle-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
