--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -3,12 +3,19 @@
     top: 2rem;
     font-family: 'Metropolis', sans-serif;
     font-size: 3rem;
+    text-shadow: 2px 2px 1px gray;
 }
 
 .nav-bar {
     display: flex;
     align-items: center;
     justify-content: center;
+    width: 100vw;
+    height: 10vh;
+    min-height: 6rem;
+    background-color: #EDEDED;
+    box-shadow: 1px 1px 2px gray;
+    z-index: 3;
 }
 
 .nav-bar ul {
@@ -17,12 +24,18 @@
     display: flex;
     top: 2.8rem;
     font-size: 1.5rem;
+    font-family: 'Metropolis', sans-serif;
 }
 
 .nav-bar ul li {
     margin: 0 1rem;
+    cursor: pointer;
 }
 
 .active-link {
     color: green;
+}
+
+.no-display {
+    display: none !important;
 }
