--- a/src/App.css
+++ b/src/App.css
@@ -12,11 +12,30 @@ html, body {
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    /* font-size: 20px !important; */
 }
 
 .body-container {
     width: 100vw;
     height: 90vh;
     position: relative;
+}
+
+
+
+@media only screen and (max-height: 1000px) {
+    html {
+      font-size: 14px !important;
+    }
+}
+
+@media only screen and (max-height: 800px) {
+    html {
+        font-size: 12px !important;
+    }
+}
+
+@media only screen and (max-height: 690px) {
+    html {
+        font-size: 10px !important;
+    }
 }
