--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    height: 10vh;
+    /* height: 10vh; */
     min-height: 6rem;
     background-color: #EDEDED;
     box-shadow: 1px 1px 2px gray;
@@ -38,4 +38,31 @@
 
 .no-display {
     display: none !important;
+}
+
+@media only screen and (max-width: 768px) {
+    .nav-bar {
+        position: fixed;
+        top: 0;
+        display: flex;
+        align-items: center;
+        /* justify-content: center; */
+        width: 100vw;
+        height: 8rem;
+        min-height: 6rem;
+        background-color: #EDEDED;
+        box-shadow: 1px 1px 2px gray;
+        z-index: 3;
+    }
+    
+    .nav-bar ul {
+        display: block;
+        position: absolute;
+        right: unset;
+        display: flex;
+        top: unset;
+        bottom: .5rem;
+        font-size: 1.5rem;
+        font-family: 'Metropolis', sans-serif;
+    }
 }
