--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: center;
     width: 100vw;
-    /* height: 10vh; */
+    height: 10vh;
     min-height: 6rem;
     background-color: #EDEDED;
     box-shadow: 1px 1px 2px gray;
