--- a/src/App.css
+++ b/src/App.css
@@ -9,10 +9,11 @@
 }
 
 html, body {
-    /* height: 100vh; */
+    height: 100vh;
     width: 100vw;
     display: inline-block;
-    /* overflow: hidden; */
+    overflow: hidden;
+    background-color: #EDEDED;
 }
 
 body {
@@ -34,7 +35,7 @@ body {
     }
 }
 
-@media only screen and (max-height: 800px) {
+@media only screen and (max-height: 820px) {
     html {
         font-size: 12px;
     }
@@ -48,7 +49,8 @@ body {
 
 @media only screen and (max-width: 768px) {
     body {
-        overflow: auto;
+        overflow-x: hidden;
+        overflow-y: scroll;
     }
 
     .body-container {
