--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -238,6 +238,12 @@ button {
     }
 }
 
+@media only screen and (max-width: 1300px) {
+    .body-container {
+        height: 88vh;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     #about-me-txt {
         position: unset;
