--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -40,6 +40,34 @@
     display: none !important;
 }
 
+@media only screen and (max-width: 1300px) {
+    .nav-bar {
+        top: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        position: relative;
+        /* justify-content: center; */
+        /* width: 100vw; */
+        height: 12vh;
+        min-height: 6rem;
+        background-color: #EDEDED;
+        box-shadow: 1px 1px 2px gray;
+        z-index: 3;
+    }
+    
+    .nav-bar ul {
+        display: block;
+        position: absolute;
+        right: unset;
+        display: flex;
+        top: unset;
+        bottom: .5rem;
+        font-size: 1.5rem;
+        font-family: 'Metropolis', sans-serif;
+    }
+}
+
 @media only screen and (max-width: 768px) {
     .nav-bar {
         position: fixed;
